# claudewatch

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1783156619696-f01a2d20677a2.mjs
docs/: claude-usage-monitor-要件定義.md  claudewatch-全体設計.md  claudewatch-詳細設計.md
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: app.rs  error.rs  lib.rs  main.rs
src-tauri/src/acquisition/: claude_client.rs  mod.rs
src-tauri/src/acquisition/cookie/: chrome.rs  firefox.rs  mod.rs  safari.rs
src-tauri/src/domain/: account.rs  mod.rs  state.rs  window.rs
src-tauri/src/ipc/: commands.rs  events.rs  mod.rs
src-tauri/src/notification/: mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/storage/: config.rs  mod.rs
src/lib/: AccountRow.svelte  api.ts  format.ts
